--- a/static/login.html
+++ b/static/login.html
@@ -90,7 +90,7 @@
 
                 console.log(usernameInput.value, passwordInput.value)
 
-               fetch('/resource/login', {
+               fetch('/login/user', {
                     method: 'POST',
                     headers: {
                     'Accept': 'application/json',
