add user register

--- a/static/confirm.html
+++ b/static/confirm.html
@@ -23,6 +23,8 @@
                 location.reload()
             })
         }
-        function disagree(){}
+        function disagree(){
+            window.close()
+        }
     </script>
 </html>
