--- a/static/user.html
+++ b/static/user.html
@@ -4,7 +4,7 @@
         <h2 style="text-align: center;"> 当前用户:<span id="username"></span></h2>
         <div style="width: 600px;height:300px; background-color: antiquewhite; margin: 20px auto;">
             <ul>
-                <li><a href="#" onclick="logout()">注销</a></li>
+                <li><a href="javascript:void(0)" onclick="logout()">注销</a></li>
             </ul>
         </div>
     </body>
