--- a/static/admin.html
+++ b/static/admin.html
@@ -2,7 +2,7 @@
     <header></header>
     <body>
         <h2 style="text-align: center;"> 当前用户:<span>{{.Account}}</span></h2>
-        <div style="width: 600px;height:auto; background-color: antiquewhite; margin: 20px auto;">
+        <div style="width: 1000px;height:auto; background-color: antiquewhite; margin: 20px auto;">
             <ul>
                 <li><a href="javascript:void(0)" onclick="logout()">注销</a></li>
             </ul>
@@ -14,6 +14,8 @@
                         <th>应用名称</th>
                         <th>ClientID</th>
                         <th>PrivateKey</th>
+                        <th>回调地址</th>
+                        <th>操作</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -22,6 +24,8 @@
                             <td>{{.Name}}</td>
                             <td>{{.ClientID}}</td>
                             <td>{{.PrivateKey}}</td>
+                            <td>{{.Callback}}</td>
+                            <td><button onclick="deleteApp({{.ID}})">删除</button></td>
                         </tr>
                     {{end}}
                 </tbody>
@@ -39,6 +43,14 @@
 
         function logout(){
             fetch("/user/logout",{
+                method: "DELETE"
+            }).then((resp)=>{
+                location.reload()
+            })
+        }
+
+        function deleteApp(id){
+            fetch("/api/app/"+id,{
                 method: "DELETE"
             }).then((resp)=>{
                 location.reload()
